--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Frontend Service</title>
+    <title>Frontend Service v2</title>
 </head>
 <body>
-    <h1>Frontend Service</h1>
+    <h1>Frontend Service v2</h1>
 
     <h2>Current Message:</h2>
     <p id="current-message">{{ current_message }}</p>
-
+    {% if updated_time %}
+        <p><strong>Last updated at:</strong> {{ updated_time }}<p>
+    {% endif %}
     <h2>Update Message</h2>
     <form action="/update" method="post">
         <input type="text" name="new_message" placeholder="Type new message" required>
