--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -9,7 +9,7 @@
     <h2>Current Message:</h2>
     <p id="current-message">{{ current_message }}</p>
     {% if updated_time %}
-        <p><strong>Last updated at:</strong> {{ updated_time }}<p>
+        <p><strong>Last updated at:</strong> {{ updated_time }}</p>
     {% endif %}
     <h2>Update Message</h2>
     <form action="/update" method="post">
